Added service and models and other changes

--- a/BattleHub.Web/BattleHub.Web.csproj
+++ b/BattleHub.Web/BattleHub.Web.csproj
@@ -2,12 +2,17 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Radzen.Blazor" Version="4.3.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BattleHub.DataAccess\BattleHub.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
