Removed some stuff and added some stuff

--- a/BattleHub.Web/appsettings.json
+++ b/BattleHub.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDB": "mongodb+srv://admin:<password>@cluster0.x6kaae7.mongodb.net/?retryWrites=true&w=majority"
+  }
 }
