Lots of changes

--- a/BattleHub.Web/appsettings.json
+++ b/BattleHub.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDB": "mongodb+srv://admin:<password>@cluster0.x6kaae7.mongodb.net/?retryWrites=true&w=majority"
+    "MongoDB": "mongodb+srv://admin:cXRLcx13NqyV4UlW@cluster0.x6kaae7.mongodb.net/?retryWrites=true&w=majority"
   }
 }
